Java pause, thread dump operational learning